--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@discordjs/voice": "^0.8.0",
     "axios": "^0.26.0",
     "canvacord": "^5.2.3",
-    "discord-api-types": "^0.27.0",
+    "discord-api-types": "^0.27.3",
     "discord.js": "^13.6.0",
     "distube": "^3.3.2",
     "dotenv": "^16.0.0",
@@ -24,6 +24,7 @@
     "got": "^12.0.1",
     "libsodium-wrappers": "^0.7.9",
     "mongoose": "^6.2.6",
+    "puppeteer": "^13.5.1",
     "scdl-core": "^1.0.20",
     "ts-node": "^10.5.0",
     "typescript": "^4.5.5",
